stdout
compiling CircularBufferTest.cpp
compiling AllTests.cpp
compiling CircularBuffer.c
CircularBuffer.c: In function 'CircularBuffer_Create':
CircularBuffer.c:21:18: error: assignment to expression with array type
   21 |     self->values = malloc(capacity * sizeof(int));
      |                  ^
compilation terminated due to -Wfatal-errors.
make: *** [/cpputest/build/MakefileWorker.mk:525: objs/CircularBuffer.o] Error 1
